# DSTL

./: .gitignore  CMakeLists.txt
include/: DSTL.TypeTraits.hpp  DSTL.hpp
src/: main.cpp
test/: CMakeLists.txt  Test.TypeTraits.cpp  test.cpp
